# SmartTestHub

./: .gitignore  .txt  e build evm non-evm  h origin main  tatus
Containers/: .env  docker-compose.yml
Containers/ai-log-processor/: Dockerfile  entrypoint.sh  main.py
Containers/evm/: Dockerfile  entrypoint.sh  main.py  package.json  upload-server.js
Containers/evm/config/: hardhat.config.js  slither.config.json
Containers/evm/scripts/: aggregate-all-logs.js
Containers/letsencrypt/: acme.json
Containers/non-evm/: Cargo.toml  Cargo.toml.template  Dockerfile  base-Cargo.toml  entrypoint-patch.sh  entrypoint.sh  solana-install
Containers/non-evm-algorand/: Dockerfile  entrypoint.sh  requirements.txt
Containers/non-evm-algorand/config/: pytest.ini
Containers/non-evm-algorand/scripts/: aggregate-all-logs.js  package.json  test_template.py
Containers/non-evm-algorand/src/: _init_.py  contract.py  performance_metrics.py  teal_verify.py
Containers/non-evm-algorand/src/utils/: _init_.py  test_generator.py  test_runner.py
Containers/non-evm-starknet/: .bandit  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
Containers/non-evm-starknet/config/: pytest.ini
Containers/non-evm-starknet/scripts/: aggregate-all-logs.js  generate_starknet_tests.py  package.json
Containers/non-evm-starknet/src/: contract.cairo
Containers/non-evm-starknet/tests/: test_generated_comprehensive.py  tests_contract.py
Containers/non-evm/config/: tarpaulin.toml
Containers/non-evm/scripts/: aggregate-all-logs.js  ai_enhance_report.js  clean_rust.rs  package.json
Containers/non-evm/src/: lib.rs
Containers/starknet-devnet/: Dockerfile
Containers/traefik/: traefik.yml
smarttesthub-project/: docker-compose.yml
smarttesthub-project/evm/: Dockerfile
smarttesthub-project/evm/config/: gas-reporter.config.js
smarttesthub-project/non-evm/: Dockerfile  entrypoint.sh
