[package]
name = "placeholder_contract"
version = "0.1.0"
edition = "2021"
authors = ["SmartTestHub"]
description = "Placeholder Solana smart contract for testing"
license = "MIT"
repository = "https://github.com/your-org/smart-test-hub"
keywords = ["solana", "blockchain", "smart-contract"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
anchor-lang = { version = "0.29.0", optional = true }
anchor-spl = { version = "0.29.0", optional = true }
solana-program = "1.18.12"               # <-- UPDATED to latest at time of writing
solana-sdk = "1.18.12"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
arrayref = "0.3.7"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
solana-program-test = "1.18.12"
solana-banks-client = "1.18.12"
tokio = { version = "1.0", features = ["full"] }
assert_matches = "1.5"
proptest = "1.0"

[lib]
name = "placeholder_contract"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
anchor = ["anchor-lang", "anchor-spl"]
test-sbf = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace]
resolver = "2"
