[package]
name = "placeholder_contract"
version = "0.1.0"
edition = "2021"
authors = ["SmartTestHub"]
description = "Placeholder Solana smart contract for testing"
license = "MIT"
repository = "https://github.com/your-org/smart-test-hub"
keywords = ["solana", "blockchain", "smart-contract"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
anchor-lang = { version = "0.30.1", optional = true }
anchor-spl = { version = "0.30.1", optional = true }
solana-program = "1.18.26"
solana-sdk = "1.18.26"
borsh = "0.10.4"
borsh-derive = "0.10.4"
thiserror = "1.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
arrayref = "0.3.7"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.13"
anyhow = "1.0"
bytemuck = { version = "1.15", features = ["derive"] }
lazy_static = "1.4"
regex = "1.10"
cfg-if = "1.0"
log = "0.4"
once_cell = "1.19"

[dev-dependencies]
solana-program-test = "1.18.26"
solana-banks-client = "1.18.26"
tokio = { version = "1.0", features = ["full"] }
assert_matches = "1.5"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "placeholder_contract"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
anchor = ["anchor-lang", "anchor-spl"]
test-sbf = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Workspace configuration removed to prevent build errors
# Will be added dynamically when contracts are processed